@@ -503,6 +503,7 @@ All (GUI):
 - Add support for alpha channel in colours in wxSVGFileDC (snowleopard).
 - Allow customizing AUI tab colours in wxAuiTabArt (snowleopard).
 - Added wxAffineMatrix2D class (Catalin Raceanu).
+- Allow showing preview frame non modally (John Roberts).
 
 GTK:
 
